[project]
name = "salaries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Johnny Hyytiäinen", email = "Johnny.Hyytiainen@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
salaries = "salaries:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
